<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.sveteam.MainActivity">

        <ImageView
            android:id="@+id/lable_pic"
            android:src="@drawable/zweite"
            style="@style/pictures"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            />

        <LinearLayout
            android:id="@+id/ll_content"
            style="@style/content_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="400dp"
            android:layout_weight=".65"
            >

            <TextView
                style="@style/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/button_news"
                    style="@style/buttonContentSwitcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news"
                    android:onClick="changeToNews"/>

                <Button
                    style="@style/buttonContentSwitcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/table"
                    android:onClick="changeToTable"/>

                <Button
                    style="@style/buttonContentSwitcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:onClick="changeToInfo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_header2"
                    style="@style/header2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_news"
                    style="@style/content"
                    android:text="@string/contentNews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:id="@+id/textview_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/content"
                    android:text="@string/contentInfo"
                    android:visibility="gone"
                    />

                <ImageView
                    android:id="@+id/content_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/table"
                    style="@style/pictures"
                    android:visibility="gone"
                    />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>